[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Script/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Game/Scenes/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Scenes/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Scenes/AttackZone.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 60.208

[sub_resource type="CircleShape2D" id=2]
radius = 317.238

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="AttackZone" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="AttackZone" to="." method="_on_AttackZone_body_entered"]
[connection signal="body_exited" from="AttackZone" to="." method="_on_AttackZone_body_exited"]

[editable path="PlayerDetectionZone"]
